ros-rpi5/ros2_ws/log/build_2026-01-23_13-15-07/speech_recognition/stderr.log
  File "/home/pi5/ros2_ws/install/speech_recognition/lib/python3.12/site-packages/speech_recognition/stt_node.py", line 256
    prepend_punctuations="\"'"¿([{-",
                              ^
SyntaxError: invalid character '¿' (U+00BF)

